--- a/examples/sampleapp.css
+++ b/examples/sampleapp.css
@@ -14,14 +14,21 @@ p {
     font-size: 14px;
 }
 
-button {
-    padding: 6px;
+.button-success,
+.button-info,
+.button-warning,
+.button-error {
+    padding: 2px 6px;
     cursor: pointer;
     border: 1px solid #AAA;
     border-radius: 3px;
+    font-size: 14px;
 }
 
-button:hover {
+.button-success:hover,
+.button-info:hover,
+.button-warning:hover,
+.button-error:hover {
     background-color: #78FA89;
     color: #000;
 }
